# Liq

./: .gitmodules  CMakeLists.txt  LiQ.pro  README.md  qml.qrc  rplidar_sdk.patch
qml/: liq.qml
src/: Controller.cpp  Controller.h  HeatSource.cpp  HeatSource.h  PointsItem.cpp  PointsItem.h  main.cpp
test/: test.pro  test_Liq.cpp
